# COGENT

./: .gitignore  COPYRIGHT  INSTALL  NOTICE  README.PETSc  README.md  install.sh
Chombo/: README  ReleaseNotes.txt  configure  configure.ac
Chombo/lib/: GNUmakefile  chombo.i  doxygen.config  doxygen.config.eb  doxygen.config.mf
Chombo/lib/mk/: Make.defs  Make.defs.SLEPC  Make.defs.config  Make.defs.defaults  Make.defs.defaults_ac.in  Make.defs.local.template  Make.example  Make.example.multidim  Make.example.old  Make.multidim.basic  Make.printVariables  Make.rules  Make.test  README  check
Chombo/lib/mk/autoconf/: Automake.rules  Make.defs  Makefile.am  anag_style_build.py  bootstrap-generated-example.sh  chombo_utils.py  genConfDir.py  header_stamp.sh  make_example_metamakefiles.py  makeflags_for_configure_xformer.py  makemakefile_anag.py  other_legal_options.txt  src_makemakefile_am.py  test_makemakefile_am.py  zap-generated-example.sh
Chombo/lib/mk/compiler/: Make.defs.GNU  Make.defs.IBM  Make.defs.Intel  Make.defs.PGI  Make.defs.PathScale  Make.defs.clang++  Make.defs.cxx
Chombo/lib/mk/local/: Make.defs.ANAG  Make.defs.ANAG-upgrade  Make.defs.CSUworkstation  Make.defs.LC  Make.defs.MacOSX.minimal  Make.defs.MacOSX_HSierra_OMPI  Make.defs.PETSc  Make.defs.archer  Make.defs.arcticus  Make.defs.carver  Make.defs.cori.hsw  Make.defs.cori.hsw.gnu  Make.defs.cori.hsw.icpc  Make.defs.cori.hsw.intel  Make.defs.cori.knl.intel  Make.defs.crusher.amd.omp.blis  Make.defs.crusher.cray  Make.defs.crusher.cray.omp  Make.defs.crusher.cray.omp.libsci  Make.defs.crusher.gcc  Make.defs.dgx  Make.defs.edison  Make.defs.edison.intel  Make.defs.edison.terry  Make.defs.frontier  Make.defs.frontier.g++  Make.defs.grendel  Make.defs.hera  Make.defs.hopper.gnu  Make.defs.igor  Make.defs.jaguar.gnu  Make.defs.knl.intel  Make.defs.lonestar5  Make.defs.melt  Make.defs.notos  Make.defs.notos.g++  Make.defs.notos.nvcc  Make.defs.notos.oneAPI  Make.defs.perlmutter  Make.defs.perlmutter-sundials  (+10 more)
Chombo/lib/src/: Makefile.am
Chombo/lib/src/AMRElliptic/: AMRFASMultiGrid.H  AMRMultiGrid.H  AMRPoissonOp.H  AMRPoissonOp.cpp  AMRPoissonOpF.ChF  AMRTGA.H  BCFunc.H  BCFunc.cpp  BaseLevelBackwardEuler.H  BaseLevelTGA.H  BiCGStabSolver.H  CCProjectorF.ChF  FASMultiGrid.H  GMRESSolver.H  LevelDataOps.H  LevelTGA.cpp  MACProjectorF.ChF  MultiGrid.H  NWOViscousTensorOp.H  NWOViscousTensorOp.cpp  NewPoissonOp.cpp  PetscCompGrid.H  PetscCompGrid.cpp  PetscCompGridVTO.H  PetscCompGridVTO.cpp  PetscSolver.H  PetscSolver.cpp  PetscSolverI.H  PoissonOp4.H  PoissonOp4.cpp  PoissonOp4F.ChF  ResistivityOp.cpp  VCAMRPoissonOp2.H  VCAMRPoissonOp2.cpp  ViscousTensorOp.H  ViscousTensorOp.cpp  ViscousTensorOpF.ChF  newViscousTensorOp.H  newViscousTensorOp.cpp
Chombo/lib/src/AMRTimeDependent/: AMR.H  AMR.cpp  AMRLevel.cpp  AdvectPhysicsF.ChF  GodunovUtilities.H  GodunovUtilities.cpp  GodunovUtilitiesF.ChF  LevelGodunov.H  LevelGodunov.cpp  LevelRK4.H  LevelRK4_v2.H  PatchGodunov.H  PatchGodunov.cpp
Chombo/lib/src/AMRTools/: AMRBoxesAndRanksIO.cpp  CFIVS.cpp  CoDimCopier.H  CoDimCopier.cpp  CoDimCopyManager.H  CoDimCopyManagerI.H  CoarseAverage.H  CornerCopier.cpp  ExtrapFillPatch.cpp  FineInterp.H  FineInterp.cpp  FineInterpFace.cpp  FourthOrderCFInterp.H  FourthOrderCFInterp.cpp  FourthOrderFineInterp.H  FourthOrderFineInterp.cpp  FourthOrderInterpStencil.H  FourthOrderInterpStencil.cpp  FourthOrderOneDInterp.H  FourthOrderOneDInterp.cpp  FourthOrderOneDStencil.H  FourthOrderOneDStencil.cpp  FourthOrderPatchInterp.H  FourthOrderPatchInterp.cpp  FourthOrderTensorInterp.H  FourthOrderTensorInterp.cpp  InterpInt.H  InterpInt.cpp  NWOQuadCFInterp.H  NWOQuadCFInterp.cpp  NodeCoarseAverage.cpp  NodeIntegrals.cpp  NodeNorms.cpp  NodeSetOperations.cpp  PiecewiseLinearFillPatch.H  PiecewiseLinearFillPatch.cpp  PiecewiseLinearFillPatchFace.H  PiecewiseLinearFillPatchFace.cpp  QuadCFInterp.cpp  computeNorm.cpp
Chombo/lib/src/BaseTools/: BitSet.cpp  CHOMBO_VERSION.H  CH_Attach.cpp  CH_Complex.H  CH_Counters.H  CH_Counters.cpp  CH_CountersF.f  CH_System.H  CH_System.cpp  CH_Thread.H  CH_Thread.cpp  CH_Timer.H  CH_Timer.cpp  CH_assert.H  CH_config.H  ClockTicks.H  FortranNameMacro.H  GNUmakefile  IndexTM.H  IndexTMI.H  Interval.H  Interval.cpp  LAPACKMatrix.H  LAPACKMatrix.cpp  Lapack.H  LoHiSide.H  MayDay.H  MayDay.cpp  Metaprograms.H  Misc.H  ParmParse.H  ParmParse.cpp  Pool.H  Pool.cpp  REAL.H  RefCountedPtr.H  RootSolver.H  SPMD.H  SPMD.cpp  SPMDI.H  (+4 more)
Chombo/lib/src/BoxTools/: AMRIO.H  AMRIO.cpp  BRMeshRefine.H  BRMeshRefine.cpp  BaseFab.H  BaseFabImplem.H  BaseFabMacros.H  BlockWrite.H  BoundaryIterator.H  BoundaryIterator.cpp  Box.H  Box.cpp  BoxIterator.H  BoxLayout.H  BoxLayout.cpp  BoxLayoutData.H  BoxLayoutData.cpp  BoxLayoutDataI.H  CFArrayBox.H  CFArrayBox.cpp  CHArray.H  CHArray_fwd.H  CH_HDF5.H  CH_HDF5.cpp  CH_OpenMP.H  CellToEdge.H  CellToEdge.cpp  Copier.H  Copier.cpp  DataIndex.H  DataIndex.cpp  DataIterator.H  DataIterator.cpp  DisjointBoxLayout.H  DisjointBoxLayout.cpp  EdgeDataBox.H  EdgeDataBox.cpp  EdgeToCell.H  EdgeToCell.cpp  FABView.H  (+50 more)
Chombo/lib/src/EBAMRElliptic/: BaseDomainBC.H  BaseDomainBC.cpp  BaseEBBC.H  ConductivityBaseDomainBC.H  DirichletConductivityDomainBC.H  DirichletConductivityDomainBC.cpp  DirichletConductivityEBBC.H  DirichletConductivityEBBC.cpp  DirichletPoissonDomainBC.H  DirichletPoissonDomainBC.cpp  DirichletPoissonEBBC.H  DirichletPoissonEBBC.cpp  DirichletViscousTensorDomainBC.H  DirichletViscousTensorDomainBC.cpp  DirichletViscousTensorEBBC.cpp  EBAMRPoissonOp.H  EBAMRPoissonOp.cpp  EBAMRPoissonOpF.ChF  EBAMRPoissonOpFactory.H  EBAMRPoissonOpFactory.cpp  EBBackwardEuler.cpp  EBConductivityOp.H  EBConductivityOp.cpp  EBConductivityOpF.ChF  EBConductivityOpFactory.H  EBConductivityOpFactory.cpp  EBLevelTGA.cpp  (+36 more)
Chombo/lib/test/: GNUmakefile
Chombo/releasedExamples/AMRPoisson/: GNUmakefile
Chombo/releasedExamples/MappedMultiBlock/: GNUmakefile
Chombo/releasedExamples/Sundials/: GNUmakefile
Chombo/releasedExamples/sparseToDenseEBHDF5/: GNUmakefile  sparseToDense.cpp
(+2645 files in other folders)
